# systema

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yaml
features/: cli.feature  environment.py
features/steps/: cli.py
systema/: __version__.py  base.py  cli.py  management.py  security.py  utils.py
systema/cli/: main.py  migration.py  query.py
systema/models/: bin.py  board.py  card.py  checklist.py  item.py  project.py  task.py
systema/server/: db.py  main.py
systema/server/auth/: endpoints.py  models.py  utils.py
systema/server/project_manager/: endpoints.py  models.py
systema/server/project_manager/endpoints/: bin.py  card.py  item.py  project.py  task.py
systema/server/project_manager/models/: bin.py  board.py  item.py  list.py  project.py  task.py
systema/tui/: app.py  proxy.py  screens.py  style.css  widgets.py
systema/tui/screens/: base.py  bin_modal.py  card_modal.py  checklist.py  config.py  confirmation.py  dashboard.py  item_modal.py  kanban.py  list.py  list_main.py  mode_modal.py  project_list.py  project_main.py  project_modal.py
systema/tui/screens/styles/: bin-modal.css  card-modal.css  checklist.css  config.css  confirmation.css  dashboard.css  item-modal.css  kanban.css  list-main.css  list.css  mode-modal.css  project-list.css
systema/tui/styles/: create-project-modal.css
tests/: test_app.py
