[tool.poetry]
name = "systema"
version = "0.4.2"
description = ""
authors = ["Rodrigo Eiti Kimura <rodrigoeitikimura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.2"}
typer = {extras = ["all"], version = "^0.9.0"}
sqlmodel = {extras = ["all"], version = "^0.0.14"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
commitizen = "^3.14.1"
ruff = "^0.2.1"
pre-commit = "^3.6.1"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
systema = "systema.cli:app"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "C901"]
extend-select = ["I"]
ignore = []

[tool.commitizen]
version = "0.4.2"
tag_format = "v$version"
version_files = [
    "systema/__version__.py",
    "pyproject.toml:version",
]

[tool.pyright]
include = ["."]
exclude = []
ignore = ["./features/steps/*.py"]
